[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Mohammad Abdul Ghafour <mohammad1478971539@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
matplotlib = "^3.5.0"
jupyterlab = "^3.2.4"
pandas = "^1.3.4"
numpy = "1.21.1"
sklearn = "^0.0"
keras = "^2.7.0"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
